[gd_scene load_steps=9 format=2]

[ext_resource path="res://testing/samuel/scripts/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Retro Gaming.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[node name="pauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="pauseButton" type="Button" parent="."]
margin_left = 586.0
margin_top = 15.0
margin_right = 658.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="pauseMenuVisual" type="ColorRect" parent="."]
margin_left = 392.0
margin_top = 78.0
margin_right = 852.0
margin_bottom = 585.0
color = Color( 0.317647, 0.12549, 0.658824, 1 )

[node name="VolumeButton" type="Button" parent="pauseMenuVisual"]
margin_left = 70.0
margin_top = 63.0
margin_right = 394.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "Volume"

[node name="BackButtonMain" type="Button" parent="pauseMenuVisual"]
margin_left = 83.0
margin_top = 414.0
margin_right = 389.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 5 )
text = "Resume"

[node name="BackButtonVolume" type="Button" parent="pauseMenuVisual"]
margin_left = 84.0
margin_top = 414.0
margin_right = 388.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 6 )
text = "Back"

[node name="SEVolume" type="Label" parent="pauseMenuVisual"]
margin_left = 127.0
margin_top = 229.0
margin_right = 349.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 3 )
text = "Sound Effects"

[node name="MusicVolume" type="Label" parent="pauseMenuVisual"]
margin_left = 188.0
margin_top = 97.0
margin_right = 272.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 4 )
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="pauseMenuVisual"]
margin_left = 49.0
margin_top = 141.0
margin_right = 417.0
margin_bottom = 190.0
min_value = -60.0
max_value = 0.0

[node name="SEVolumeSlider" type="HSlider" parent="pauseMenuVisual"]
margin_left = 48.0
margin_top = 268.0
margin_right = 416.0
margin_bottom = 317.0
min_value = -60.0
max_value = 0.0

[connection signal="pressed" from="pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="pauseMenuVisual/VolumeButton" to="." method="_on_VolumeButton_pressed"]
[connection signal="pressed" from="pauseMenuVisual/BackButtonMain" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="pauseMenuVisual/BackButtonVolume" to="." method="_on_BackButtonVolume_pressed"]
[connection signal="value_changed" from="pauseMenuVisual/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="pauseMenuVisual/SEVolumeSlider" to="." method="_on_SEVolumeSlider_value_changed"]
